--- a/udrive/index.html
+++ b/udrive/index.html
@@ -4,145 +4,217 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>U-Drive</title>
-    <!-- favicon -->
     <link
       rel="icon"
       href="./resources/favicon/U-drive-favicon.svg"
       type="image/svg+xml"
     />
-    <!-- bootstrap icon -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
     />
-    <!-- bootstrap styles -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <!-- custom style-sheet -->
     <link rel="stylesheet" href="./resources/css/styles.css" />
   </head>
-  <!-- body -->
   <body>
-    <!-- navbar starts here -->
-    <nav class="navbar navbar-dark bg-dark fixed-top">
-      <div class="container-fluid mx-4">
-        <a class="navbar-brand text-violet text-large fw-bold" href="#"
-          >U-Drive</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="offcanvas"
-          data-bs-target="#offcanvasDarkNavbar"
-          aria-controls="offcanvasDarkNavbar"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="offcanvas offcanvas-end text-bg-dark"
-          tabindex="-1"
-          id="offcanvasDarkNavbar"
-          aria-labelledby="offcanvasDarkNavbarLabel"
-        >
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
-              Dark offcanvas
-            </h5>
-            <button
-              type="button"
-              class="btn-close btn-close-white"
-              data-bs-dismiss="offcanvas"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
-                  >Feature</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
-                  >Testimonial</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
-                  >About Us</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  socials
-                </a>
-                <ul class="dropdown-menu dropdown-menu-dark">
-                  <li>
-                    <a class="dropdown-item" href="#"
-                      ><i class="bi bi-facebook"></i> facebook</a
-                    >
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#"
-                      ><i class="bi bi-instagram"></i> Instagram</a
-                    >
-                  </li>
-                  <li></li>
-                  <li>
-                    <a class="dropdown-item" href="#"
-                      ><i class="bi bi-whatsapp"></i> Whatsaap</a
-                    >
-                  </li>
-                  <li>
-                    <hr class="dropdown-divider" />
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#"
-                      ><a href="tel:+917304617780" class="dropdown-item"
+    <div class="wrapper d-flex flex-column min-vh-100">
+      <nav class="navbar navbar-dark bg-dark fixed-top w-100">
+        <div class="container-fluid">
+          <a class="navbar-brand fw-bold text-violet" href="#">U-Drive</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasDarkNavbar"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="offcanvas offcanvas-end text-bg-dark"
+            id="offcanvasDarkNavbar"
+          >
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title">Learn to Drive with Confidence</h5>
+              <button
+                type="button"
+                class="btn-close btn-close-white"
+                data-bs-dismiss="offcanvas"
+              ></button>
+            </div>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link text-violet" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-violet" href="#">Feature</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-violet" href="#">Testimonial</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-violet" href="#">About Us</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle text-violet"
+                    href="#"
+                    data-bs-toggle="dropdown"
+                    >Socials</a
+                  >
+                  <ul class="dropdown-menu dropdown-menu-dark">
+                    <li>
+                      <a
+                        class="dropdown-item text-violet"
+                        href="https://www.facebook.com/profile.php?id=100076147848704"
+                        ><i class="bi bi-facebook"></i> Facebook</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="dropdown-item text-violet"
+                        href="https://www.instagram.com/udrive.drivingschool?igsh=cTZvcDV1NnZlN2Zu"
+                        ><i class="bi bi-instagram"></i> Instagram</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="dropdown-item text-violet"
+                        href="https://wa.me/+917304617780?text=Hi%2C%20I%E2%80%99m%20interested%20in%20booking%20driving%20lessons.%20Can%20you%20please%20provide%20information%20on%20your%20available%20courses%20and%20pricing%3F"
+                        ><i class="bi bi-whatsapp"></i> WhatsApp</a
+                      >
+                    </li>
+                    <li><hr class="dropdown-divider" /></li>
+                    <li>
+                      <a
+                        href="tel:+917304617780"
+                        class="dropdown-item text-violet"
                         ><i class="bi bi-telephone"></i> Call Us</a
                       >
-                    </a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-            <form class="d-flex mt-3" role="search">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-success" type="submit">Search</button>
-            </form>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
-      </div>
-    </nav>
-    <!-- nav-bar ends here -->
+      </nav>
 
-    <!-- js bootstrap -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+      <section class="vh-100">
+        <div id="carouselExampleDark" class="carousel slide h-100">
+          <div class="carousel-inner h-100">
+            <div class="carousel-item active h-100" data-bs-interval="10000">
+              <img
+                src="./resources/banner-images/udrive-banner-1.jpg"
+                class="d-block w-100 h-100"
+                alt="..."
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>
+                  Some representative placeholder content for the first slide.
+                </p>
+              </div>
+            </div>
+            <div class="carousel-item h-100" data-bs-interval="2000">
+              <img
+                src="./resources/banner-images/udrive-banner-2.jpg"
+                class="d-block w-100 h-100"
+                alt="..."
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>
+                  Some representative placeholder content for the second slide.
+                </p>
+              </div>
+            </div>
+            <div class="carousel-item h-100">
+              <img
+                src="./resources/banner-images/udrive-banner-3.jpg"
+                class="d-block w-100 h-100"
+                alt="..."
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>
+                  Some representative placeholder content for the third slide.
+                </p>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
+
+      <footer
+        class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top bg-dark-subtle mt-0 mb-0"
+      >
+        <div class="col-md-4 d-flex align-items-center">
+          <a
+            href="/"
+            class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
+          >
+            <svg class="bi" width="30" height="24">
+              <use xlink:href="#bootstrap"></use>
+            </svg>
+          </a>
+          <span class="mb-3 mb-md-0 text-body-secondary"
+            >© 2024 U-Drive, Inc</span
+          >
+        </div>
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex pe-2">
+          <li class="ms-3">
+            <a
+              class="text-body-secondary"
+              href="https://www.facebook.com/profile.php?id=100076147848704"
+              ><i class="bi bi-facebook"></i
+            ></a>
+          </li>
+          <li class="ms-3">
+            <a
+              class="text-body-secondary"
+              href="https://www.instagram.com/udrive.drivingschool?igsh=cTZvcDV1NnZlN2Zu"
+              ><i class="bi bi-instagram"></i
+            ></a>
+          </li>
+          <li class="ms-3">
+            <a
+              class="text-body-secondary"
+              href="https://wa.me/+917304617780?text=Hi%2C%20I%E2%80%99m%20interested%20in%20booking%20driving%20lessons.%20Can%20you%20please%20provide%20information%20on%20your%20available%20courses%20and%20pricing%3F"
+              ><i class="bi bi-whatsapp"></i
+            ></a>
+          </li>
+          <li class="ms-3">
+            <a class="text-body-secondary" href="tel:+917304617780"
+              ><i class="bi bi-telephone"></i
+            ></a>
+          </li>
+        </ul>
+      </footer>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
