made carousel responsive

--- a/udrive/index.html
+++ b/udrive/index.html
@@ -149,9 +149,10 @@
         <div class="carousel-item active">
           <img
             alt="..."
-            class="d-block w-100"
+            class="d-block w-100 c-img"
             src="./resources/banner-images/udrive-banner-1.jpg"
           />
+          <!-- carousel caption -->
           <div class="carousel-caption">
             <h5>Your Dream House</h5>
             <p>
@@ -164,9 +165,10 @@
         <div class="carousel-item">
           <img
             alt="..."
-            class="d-block w-100"
+            class="d-block w-100 c-img"
             src="./resources/banner-images/udrive-banner-2.jpg"
           />
+          <!-- carousel caption -->
           <div class="carousel-caption">
             <h5>Always Dedicated</h5>
             <p>
@@ -179,9 +181,10 @@
         <div class="carousel-item">
           <img
             alt="..."
-            class="d-block w-100"
+            class="d-block w-100 c-img"
             src="./resources/banner-images/udrive-banner-3.jpg"
           />
+          <!-- carousel caption -->
           <div class="carousel-caption">
             <h5>True Construction</h5>
             <p>
@@ -474,6 +477,10 @@
       </div>
     </section>
     <!-- team ends -->
+
+    <!-- testimonial section starts here -->
+
+    <!-- testimonial section ends here -->
 
     <!-- footer starts -->
     <footer class="bg-dark p-2 text-center">
