hero sectioin changed

--- a/udrive/index.html
+++ b/udrive/index.html
@@ -52,9 +52,7 @@
         >
           <!-- sidebar header -->
           <div class="offcanvas-header text-white border-bottom">
-            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
-              Dark offcanvas
-            </h5>
+            <p class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</p>
             <button
               type="button"
               class="btn-close btn-close-white shadow-none"
@@ -154,12 +152,8 @@
           />
           <!-- carousel caption -->
           <div class="carousel-caption">
-            <h5>Your Dream House</h5>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime,
-              nulla, tempore. Deserunt excepturi quas vero.
-            </p>
-            <p><a class="btn btn-warning mt-3" href="#">Learn More</a></p>
+            <h5>Welcome to U-DRIVE MOTOR TRAINING ACADEMY</h5>
+            <p>Drive with confidence, arrive with style.</p>
           </div>
         </div>
         <div class="carousel-item">
@@ -170,12 +164,11 @@
           />
           <!-- carousel caption -->
           <div class="carousel-caption">
-            <h5>Always Dedicated</h5>
+            <h5>Drive with Confidence</h5>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime,
-              nulla, tempore. Deserunt excepturi quas vero.
+              Unlock your full driving potential with our expert-led lessons
+              designed to build confidence and skill behind the wheel.
             </p>
-            <p><a class="btn btn-warning mt-3" href="#">Learn More</a></p>
           </div>
         </div>
         <div class="carousel-item">
@@ -191,7 +184,6 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime,
               nulla, tempore. Deserunt excepturi quas vero.
             </p>
-            <p><a class="btn btn-warning mt-3" href="#">Learn More</a></p>
           </div>
         </div>
       </div>
@@ -217,7 +209,7 @@
     <!-- carousel ends here -->
 
     <!-- about section starts -->
-    <section class="about section-padding" id="about">
+    <section class="about" id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-4 col-md-12 col-12">
