fade-in animation added

--- a/udrive/index.html
+++ b/udrive/index.html
@@ -219,11 +219,11 @@
           </div>
           <div class="col-lg-8 col-md-12 col-12 ps-lg-5 mt-md-5">
             <div class="about-text">
-              <h2>
+              <h2 class="fade-in">
                 We Provide the Best Quality<br />
                 Services Ever
               </h2>
-              <p>
+              <p class="fade-in">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam,
                 labore reiciendis. Assumenda eos quod animi! Soluta nesciunt
                 inventore dolores excepturi provident, culpa beatae tempora,
@@ -238,21 +238,22 @@
       </div>
     </section>
     <!-- about section Ends -->
+
     <!-- services section Starts -->
     <section class="services section-padding" id="services">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div class="section-header text-center pb-5">
-              <h2>Our Services</h2>
-              <p>
+              <h2 class="fade-in">Our Services</h2>
+              <p class="fade-in">
                 Lorem ipsum dolor sit amet, consectetur<br />
                 adipisicing elit. Non, quo.
               </p>
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row fade-in">
           <div class="col-12 col-md-12 col-lg-4">
             <div class="card text-white text-center bg-dark pb-2">
               <div class="card-body">
@@ -297,86 +298,21 @@
     </section>
     <!-- services section Ends -->
 
-    <!-- portfolio strats -->
-    <section class="portfolio section-padding" id="portfolio">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="section-header text-center pb-5">
-              <h2>Our Projects</h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur<br />
-                adipisicing elit. Non, quo.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-md-12 col-lg-4">
-            <div class="card text-light text-center bg-white pb-2">
-              <div class="card-body text-dark">
-                <div class="img-area mb-4">
-                  <img alt="" class="img-fluid" src="img/project-1.jpg" />
-                </div>
-                <h3 class="card-title">Building Make</h3>
-                <p class="lead">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Adipisci eligendi modi temporibus alias iste. Accusantium?
-                </p>
-                <button class="btn bg-warning text-dark">Learn More</button>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-12 col-lg-4">
-            <div class="card text-light text-center bg-white pb-2">
-              <div class="card-body text-dark">
-                <div class="img-area mb-4">
-                  <img alt="" class="img-fluid" src="img/project-2.jpg" />
-                </div>
-                <h3 class="card-title">Building Make</h3>
-                <p class="lead">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Adipisci eligendi modi temporibus alias iste. Accusantium?
-                </p>
-                <button class="btn bg-warning text-dark">learn More</button>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-12 col-lg-4">
-            <div class="card text-light text-center bg-white pb-2">
-              <div class="card-body text-dark">
-                <div class="img-area mb-4">
-                  <img alt="" class="img-fluid" src="img/project-3.jpg" />
-                </div>
-                <h3 class="card-title">Building Make</h3>
-                <p class="lead">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Adipisci eligendi modi temporibus alias iste. Accusantium?
-                </p>
-                <button class="btn bg-warning text-dark">Learn More</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- portfolio ends -->
-
     <!-- team starts -->
     <section class="team section-padding" id="team">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div class="section-header text-center pb-5">
-              <h2>Our Team</h2>
-              <p>
+              <h2 class="fade-in">Our Team</h2>
+              <p class="fade-in">
                 Lorem ipsum dolor sit amet, consectetur<br />
                 adipisicing elit. Non, quo.
               </p>
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row fade-in">
           <div class="col-12 col-md-6 col-lg-3">
             <div class="card text-center">
               <div class="card-body">
@@ -488,5 +424,12 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="./resources/js/index.js"></script>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
   </body>
 </html>
