text chaged at price section

--- a/udrive/index.html
+++ b/udrive/index.html
@@ -535,7 +535,7 @@
                   $20<small class="text-body-secondary faint-green">/mo</small>
                 </h1>
                 <ul class="list-unstyled mt-3 mb-4">
-                  <li>Two and four-wheeler licenses without training</li>
+                  <li>2 & 4-Wheeler Licenses (No Training)</li>
                   <li>Documentation assistance</li>
                   <li>Quick processing</li>
                   <li>Support for any inquiries</li>
