fade-in animation changed to fadeInOnLoad

--- a/udrive/index.html
+++ b/udrive/index.html
@@ -162,7 +162,7 @@
               alt="Image for mobile screens"
             />
             <!-- carousel caption -->
-            <div class="carousel-caption">
+            <div class="carousel-caption fadeInOnLoad">
               <h5>Welcome to U-DRIVE MOTOR TRAINING ACADEMY</h5>
               <p>Drive with confidence, arrive with style.</p>
             </div>
@@ -181,7 +181,7 @@
               alt="Image for mobile screens"
             />
             <!-- carousel caption -->
-            <div class="carousel-caption">
+            <div class="carousel-caption fadeInOnLoad">
               <h5>Drive with Confidence</h5>
               <p>
                 Unlock your full driving potential with our expert-led lessons
@@ -203,7 +203,7 @@
               alt="Image for mobile screens"
             />
             <!-- carousel caption -->
-            <div class="carousel-caption">
+            <div class="carousel-caption fadeInOnLoad">
               <h5>True Construction</h5>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -235,8 +235,15 @@
     <!-- carousel ends here -->
 
     <!-- about section starts -->
-    <section class="about section-padding" id="about">
+    <section class="about section-padding-head" id="about">
       <div class="container">
+        <div class="row fadeInOnLoad-abut visible">
+          <div class="col-md-12">
+            <div class="section-header text-center pb-5">
+              <h2 class="fadeInOnLoad-abut">ABOUT US</h2>
+            </div>
+          </div>
+        </div>
         <div class="row">
           <div class="col-lg-4 col-md-12 col-12">
             <div class="about-img">
@@ -763,7 +770,7 @@
         formId: "242900896034458",
         buttonText: "Contact Us",
         buttonSide: "right",
-        buttonAlign: "center",
+        buttonAlign: "bottom",
         base: "https://form.jotform.com/",
       }).componentID;
     </script>
