turned scroll-bar to translucent

--- a/dem carouse;/index.html
+++ b/dem carouse;/index.html
@@ -38,7 +38,7 @@
     />
   </head>
 
-  <body>
+  <body class="scrollable-element">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
